fix image width/stretch height, allow body to shrink

--- a/meinberlin/assets/scss/components/_list_item.scss
+++ b/meinberlin/assets/scss/components/_list_item.scss
@@ -26,8 +26,8 @@
 }
 
 .list-item--has-image__image {
-    height: 7.5em;
-    width: 7.5em;
+    min-height: 7.5em;
+    flex: 0 0 7.5em;
 
     background-size: cover;
     background-position: 50%;
@@ -37,7 +37,7 @@
 
 .list-item--has-image__body {
     padding: 0.7em $padding;
-    flex: 1 0 auto;
+    flex: 1 1 auto;
 }
 
 .list-item__title {
